--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,3 +40,12 @@
     backdrop-filter: saturate(200%) blur(25px);
   
   }
+
+  .submit__button{
+      width: 100%;
+
+      &:hover{
+          cursor: pointer;
+          
+      }
+  }
