updated libraries of angular

--- a/src/app/modules/land-page/land-page.component.html
+++ b/src/app/modules/land-page/land-page.component.html
@@ -39,14 +39,14 @@
              
   
                 <!-- Submit button -->
-                <button type="submit" class="submit__button btn btn-primary btn-block mb-4">
+                <button type="submit"  [routerLink]="['/homepage']"  class="submit__button btn btn-primary btn-block mb-4">
                   Log in
                 </button>
   
                 <!-- Register buttons -->
                 <div class="text-center">
                   <p>or sign up:</p>
-                  <button type="button" class="signup__buttn btn btn-link btn-floating mx-1">
+                  <button type="button" [routerLink]="['/signup']" class="signup__buttn btn btn-link btn-floating mx-1">
                     Sign up
                   </button>
   
