--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -2,20 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- Container wrapper -->
     <div class="container-fluid">
-      <!-- Toggle button -->
-      <!-- <button
-        class="navbar-toggler"
-        type="button"
-        data-mdb-toggle="collapse"
-        data-mdb-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <i class="fas fa-bars"></i>
-      </button> -->
   
-      <!-- Collapsible wrapper -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
       
     
@@ -32,63 +19,44 @@
           </li>
         </ul>
         <!-- Left links -->
-      </div>
-      <!-- Collapsible wrapper -->
-  
-      <!-- Right elements -->
-      <div class="d-flex align-items-center">
-        <!-- Icon -->
-       
-  
-        <!-- Notifications -->
+      
+    
        
       </div>
-      <div class="fr" style="margin-left: auto">
-        <div class="fr itms-c" style="margin-right: 50px">
-          <span
-            class="icon-badge-container c-ptr"
-            [routerLink]="['/notifications']"
-          >
-            <!-- <mat-icon
-              svgIcon="notification"
-              style="color: #3543db"
-              [matBadge]="notificationCount"
-              matBadgeColor="warn"
-            >
-            </mat-icon> -->
-          </span>
-        </div>
-        <div>
-          <!-- <div [matMenuTriggerFor]="menu" class="fr itms-c c-ptr">
-            <div style="margin-right: 21px">
-              <span *ngIf="user"
-                ><b>{{ user.firstName }} {{ user.lastName }}</b></span
-              >
-            </div>
-            <img
-              *ngIf="user.mediaId != null"
-              [src]="imageUrl"
-              id="avatar"
-              alt="User Name"
-            />
-            <div
-              *ngIf="user.mediaId == null"
-              id="avatar"
-              class="fr-c itms-c"
-              #second
-            >
-              {{ initials }}
-            </div>
-          </div> -->
-          <!-- <mat-menu #menu="matMenu">
-            <span *ngIf="isMerchant" mat-menu-item [routerLink]="['/settings']"
-              >Profile</span
-            >
-            <span mat-menu-item (click)="logout()">Logout</span>
-          </mat-menu> -->
-        </div>
-      </div>
+  
     </div>
-    <!-- Container wrapper -->
+  
   </nav>
-  <!-- Navbar -->
+
+
+  <div class="container">
+    <div class="row">
+        <div class="col-md-6 col-lg-4 g-mb-30">
+          <article class="u-shadow-v18 g-bg-white text-center rounded g-px-20 g-py-40 g-mb-5">
+            <img class="d-inline-block img-fluid mb-4" src="../../../assets/blackimage.jpeg" alt="Image Description">
+            <h4 class="h5 g-color-black g-font-weight-600 g-mb-10">Jane Doe</h4>
+            <p>5 albums</p>
+            <span class=" user-link d-block g-color-primary g-font-size-16" [routerLink]="['/users']">View User</span>
+          </article>
+        </div>
+        
+        <div class="col-md-6 col-lg-4 g-mb-30">
+          <article class="u-shadow-v18 g-bg-white text-center rounded g-px-20 g-py-40 g-mb-5">
+            <img class="d-inline-block img-fluid mb-4" src="../../../assets/dark-side.jpeg" alt="Image Description">
+            <h4 class="h5 g-color-black g-font-weight-600 g-mb-10">John Doe</h4>
+            <p>2 albums</p>
+            <span class="user-link d-block g-color-primary g-font-size-16" [routerLink]="['/users']">View User</span>
+          </article>
+        </div>
+        
+        <div class="col-md-6 col-lg-4 g-mb-30">
+          <article class="u-shadow-v18 g-bg-white text-center rounded g-px-20 g-py-40 g-mb-5">
+            <img class="d-inline-block img-fluid mb-4" src="../../../assets/Tie.jpeg" alt="Image Description">
+            <h4 class="h5 g-color-black g-font-weight-600 g-mb-10">Pouline Mwakitawa</h4>
+            <p>4 albums</p>
+            <span class="user-link d-block g-color-primary g-font-size-16" [routerLink]="['/users']">View user</span>
+          </article>
+        </div>
+    </div>
+</div>
+
