updated user page section

--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -3,7 +3,7 @@
 
         <div class="user-page col-md-9 col-md-pull-3">
             <section class="search-result-item">
-                <a class="image-link"><img class="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                <a class="image-link"><img class="image" src="../../../assets/dark-side.jpeg">
                 </a>
                 <div class="search-result-item-body">
                     <div class="row">
@@ -37,7 +37,7 @@
                 </div>
             </section>
             <section class="search-result-item">
-                <a class="image-link"><img class="image" src="https://bootdey.com/img/Content/avatar/avatar2.png">
+                <a class="image-link"><img class="image" src="../../../assets/Tie.jpeg">
                 </a>
                 <div class="search-result-item-body">
                     <div class="row">
@@ -48,7 +48,7 @@
                         </div>
                         <div class="col-sm-3 text-align-center">
                             <p class="value3 mt-sm">Click down</p>
-                            <p class="fs-mini text-muted">To view more</p><a class="btn btn-info btn-sm">View Albums</a></a>
+                            <p class="fs-mini text-muted">To view more</p><a class="btn btn-info btn-sm">View Albums</a>
                         </div>
                     </div>
                 </div>
