--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -1,59 +1,31 @@
-<div class="container">
-    <div class="row ng-scope">
+<div class="row">
 
-        <div class="user-page col-md-9 col-md-pull-3">
-            <section class="search-result-item">
-                <a class="image-link"><img class="image" src="../../../assets/dark-side.jpeg">
-                </a>
-                <div class="search-result-item-body">
-                    <div class="row">
-                        <div class="col-sm-9">
-                            <h4 class="search-result-item-heading"><a href="#">john doe</a></h4>
-                            <p class="info">2 albums</p>
-                            <p class="description">They contain pictures of flowers and nature</p>
-                        </div>
-                        <div class="col-sm-3 text-align-center">
-                            <p class="value3 mt-sm">Click down</p>
-                            <p class="fs-mini text-muted">To view more</p><a class="btn btn-primary btn-info btn-sm" href="#">View Albums</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="search-result-item">
-                <a class="image-link" href="#"><img class="image" src="../../../assets/blackimage.jpeg">
-                </a>
-                <div class="search-result-item-body">
-                    <div class="row">
-                        <div class="col-sm-9">
-                            <h4 class="search-result-item-heading"><a href="#">jane doe</a></h4>
-                            <p class="info">5 albums</p>
-                            <p class="description">Contains random photos of memories</p>
-                        </div>
-                        <div class="col-sm-3 text-align-center">
-                            <p class="value3 mt-sm">Click down</p>
-                            <p class="fs-mini text-muted">To view more</p><a class="btn btn-primary btn-info btn-sm" href="#">View Albums</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="search-result-item">
-                <a class="image-link"><img class="image" src="../../../assets/Tie.jpeg">
-                </a>
-                <div class="search-result-item-body">
-                    <div class="row">
-                        <div class="col-sm-9">
-                            <h4 class="search-result-item-heading"><a href="#">pouline mwakitawa</a></h4>
-                            <p class="info">4 albums</p>
-                            <p class="description">this is a collection of my life story</p>
-                        </div>
-                        <div class="col-sm-3 text-align-center">
-                            <p class="value3 mt-sm">Click down</p>
-                            <p class="fs-mini text-muted">To view more</p><a class="btn btn-info btn-sm">View Albums</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-           
-        </div>
+<div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="../../../assets/blackimage.jpeg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Nature Album</h5>
+      <p class="card-text">distinctio dolor, nobis delectus aspernatur quam debitis .</p>
+      <a [routerLink]="['/albumpage']"class="btn btn-primary">View Album</a>
     </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="../../../assets/blackimage.jpeg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">People Album</h5>
+      <p class="card-text">Sint fugit hic quibusdam veniam voluptatum </p>
+      <a [routerLink]="['/albumpage']" class="btn btn-primary">View Album</a>
     </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="../../../assets/blackimage.jpeg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Musicians</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+      <a [routerLink]="['/albumpage']" class="btn btn-primary">View Album</a>
+    </div>
+  </div>
+
+
+</div>
